RWA-3812: Fix code smells (#425)